Created POST request documentation for Claim
