# routes/api.php
@@ -18,3 +18,5 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
 });
 
 Route::get('/student/{nsid}', 'StudentController@getStudentByNSID');
+
+Route::post('/claim', 'ClaimController@addClaim');
