# storage/api-docs/api-docs.json
@@ -18,6 +18,44 @@
         "http"
     ],
     "paths": {
+        "/api/claim": {
+            "post": {
+                "tags": [
+                    "claim"
+                ],
+                "summary": "Add a new claim to the system",
+                "description": "",
+                "operationId": "addClaim",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Claim object that needs to be added to the system",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Claim"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Claim added successfully",
+                        "schema": {
+                            "$ref": "#/definitions/Claim"
+                        }
+                    },
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
         "/api/student/{nsid}": {
             "get": {
                 "tags": [
@@ -64,9 +102,107 @@
         }
     },
     "definitions": {
+        "Claim": {
+            "required": [
+                "id",
+                "date",
+                "type",
+                "amount",
+                "paymentMethod",
+                "payeeAddress"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "example": "SLIC-00000"
+                },
+                "date": {
+                    "type": "string",
+                    "format": "date",
+                    "example": "2020-01-15"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "Residential"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "Claim description - If any"
+                },
+                "amount": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "100000"
+                },
+                "paymentMethod": {
+                    "type": "string",
+                    "example": "Cash"
+                },
+                "paymentReceiversName": {
+                    "type": "string",
+                    "example": "John Doe"
+                },
+                "paymentReceiversNIC": {
+                    "type": "string",
+                    "example": "123456789 V"
+                },
+                "payeeAddress": {
+                    "type": "string",
+                    "example": "Example Address, Area."
+                },
+                "nsid": {
+                    "type": "string",
+                    "example": "ABC-123-000"
+                },
+                "school": {
+                    "type": "string",
+                    "example": "Example School, Area."
+                },
+                "censusNo": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "00000"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "John Smith"
+                },
+                "admissionNo": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "00000"
+                },
+                "dob": {
+                    "type": "string",
+                    "format": "date",
+                    "example": "2000-01-15"
+                },
+                "mothersName": {
+                    "type": "string",
+                    "example": "Jane Doe"
+                },
+                "mothersNIC": {
+                    "type": "string",
+                    "example": "123456789 V"
+                },
+                "fathersName": {
+                    "type": "string",
+                    "example": "John Doe"
+                },
+                "fathersNIC": {
+                    "type": "string",
+                    "example": "123456789 V"
+                },
+                "guardiansName": {
+                    "type": "string",
+                    "example": "Legal Guardian's name - If any"
+                }
+            },
+            "type": "object"
+        },
         "Student": {
             "required": [
-                "name"
+                "nsid"
             ],
             "properties": {
                 "nsid": {
